<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:contentDescription="@string/text_view_content_description"
        android:src="@drawable/main_background_runner" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00F2D29B"
        android:orientation="vertical"

        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="casual"
            android:text="@string/text_view_hello"
            android:textAlignment="center"
            android:textColor="#224466"
            android:textSize="52sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textView_pojalovatio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="casual"
            android:text="@string/text_view_hello2"
            android:textAlignment="center"
            android:textColor="#224466"
            android:textSize="52sp"

            />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="343dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="#0D7C2424"
            android:ems="10"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"

            android:fontFamily="casual"
            android:hint="@string/text_edit_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/text_view_hint_color"/>



        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="342dp"
            android:layout_height="52dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
           android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="#0D7C2424"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/edit_text_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/text_view_hint_color"/>

        <Button
            android:id="@+id/layout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="55dp"
            android:background="#090808"
            android:fontFamily="casual"
            android:onClick="onClickLogin"
            android:text="@string/button_login"
            android:textColor="#FCFBFB"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:fontFamily="casual"
            android:text="@string/button_no_account"
            android:textColor="#FCFBFB"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView_registration"
            android:layout_width="184dp"
            android:fontFamily="casual"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_registration"
            android:textColor="#FCFBFB"
            android:textSize="24sp"
            android:linksClickable="true"
            android:onClick="onClickRegistration"
            />


    </LinearLayout>

</FrameLayout>