<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightBrown"

    >

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:hint="@string/text_view_reg_name"
        android:inputType="textPersonName"
        android:importantForAutofill="no"

        />

    <EditText
        android:id="@+id/editTextEmail"
        android:hint="@string/text_view_reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:inputType="textEmailSubject"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:importantForAutofill="no"

        />

    <EditText
        android:id="@+id/editTextPassword"
        android:hint="@string/text_view_reg_passw"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:importantForAutofill="no"



        />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:hint="@string/text_view_reg_confirm_passw"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:importantForAutofill="no"

        />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_reg_submit" />
</LinearLayout>