<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/text_view_content_description"
        android:scaleType="fitXY"
        android:src="@drawable/main_background_runner"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00F2D29B"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:fontFamily="serif"
            android:textAlignment="center"
            android:text="@string/text_view_user_information"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="#0D7C2424"
            android:fontFamily="serif"
            android:importantForAutofill="no"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/text_view_name"
            android:textColor="#022B53"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="386dp"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="#97FCF9F9"
            android:fontFamily="serif"
            android:importantForAutofill="no"
           android:textColor="#022B53"
           android:textSize="20sp" />


        <TextView
            android:id="@+id/textViewActivityLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0D7C2424"
            android:fontFamily="serif"
            android:importantForAutofill="no"
            android:layout_marginTop="25dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/text_view_activity"
            android:textColor="#022B53"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewActivity"
            android:layout_width="386dp"
            android:layout_height="42dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="center_horizontal"
            android:background="#96FAF7F7"
            android:fontFamily="serif"
            android:importantForAutofill="no"
            android:textColor="#022B53"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textViewAgeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0D7C2424"
            android:fontFamily="serif"
            android:layout_marginTop="25dp"
            android:importantForAutofill="no"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/text_view_age"
            android:textColor="#022B53"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewAge"
            android:layout_width="386dp"
            android:layout_height="42dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="center_horizontal"
            android:background="#96FAF7F7"
            android:fontFamily="serif"
            android:importantForAutofill="no"
            android:textColor="#022B53"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textViewEmailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0D7C2424"
            android:fontFamily="serif"
            android:layout_marginTop="25dp"
            android:importantForAutofill="no"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/text_view_email"
            android:textColor="#022B53"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="386dp"
            android:layout_height="42dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="center_horizontal"
            android:background="#96FAF7F7"
            android:fontFamily="serif"
            android:importantForAutofill="no"
            android:textColor="#022B53"
            android:textSize="20sp" />


        <Button
            android:id="@+id/buttonOk"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:onClick="OnClickOk"
            android:background="#0A0A0A"
            android:text="@string/button_text_ok"
            android:textColor="@color/white" />

    </LinearLayout>

</FrameLayout>